--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,8 +54,9 @@ jobs:
           pip install -e .
           pip install commonconf nose2 coverage coveralls==2.2.0
 
-      - name: Apply db migrations
+      - name: Setup App
         run: |
+           cp conf/test.conf conf/app.conf
            alembic upgrade head
 
       - name: Run Python Linters
