web ui based on the axdd-django template

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,11 @@ services:
       context: .
       target: app-container
     restart: always
-    container_name: dawgpath_data_pipeline_app
+    container_name: dawgpath_pipeline_admin_app
     environment:
-      ENV: localdev
-      AUTH: SAML_MOCK
-      GOOGLE_ANALYTICS_KEY: "${GOOGLE_ANALYTICS_KEY}"
+      - GOOGLE_ANALYTICS_KEY=${GOOGLE_ANALYTICS_KEY}
     volumes:
-      - ./dawgpath_data_pipeline:/app/dawgpath_data_pipeline
+      - ./dawgpath_pipeline_admin:/app/dawgpath_pipeline_admin
       - statics-volume:/static
     ports:
       - "${RUNSERVER_PORT:-8000}:8000"
@@ -23,17 +21,16 @@ services:
       context: .
       target: node-bundler
     restart: always
-    container_name: dawgpath_data_pipeline_node
+    container_name: dawgpath_pipeline_admin_node
     ports:
       - "${BUNDLE_ANALYZER_PORT:-8888}:8888" # Required when environment.BUNDLE_ANALYZER is true
     environment:
       NODE_ENV: "development"
       VUE_DEVTOOLS: "True"
       BUNDLE_ANALYZER: "True"
-      ENV: "development"
     volumes:
-      - ./dawgpath_data_pipeline:/app/dawgpath_data_pipeline # expose main django app so webpack-loader can output bundles here
-      - ./dawgpath_data_pipeline_vue:/app/dawgpath_data_pipeline_vue
+      - ./dawgpath_pipeline_admin:/app/dawgpath_pipeline_admin # expose main django app so vite can output bundles here
+      - ./dawgpath_pipeline_admin_vue:/app/dawgpath_pipeline_admin_vue
       - statics-volume:/static
     command: npm run watch
     stdin_open: true
