adding config files

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.DS_Store
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -117,6 +118,9 @@ venv.bak/
 # Rope project settings
 .ropeproject
 
+# IDE settings
+.editorconfig
+
 # mkdocs documentation
 /site
 
@@ -127,5 +131,23 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# private connection settings
+constring.txt
+
+# node
+node_modules/
+package-lock.json
+
+# vite bundle
+assets/
+manifest.json
+
+# cypress image snapshots diffs
+screenshots/
+__diff_output__/
+
+# coverage
+coverage
 
 app.conf
